update readme/white-paper